--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/applogo"
-        android:label="@string/app_name"
+        android:label="Mydc"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
